--- a/sections/Design/TnTDesign/TargetDesign.tex
+++ b/sections/Design/TnTDesign/TargetDesign.tex
@@ -1,19 +1,19 @@
 \section{Target Design}
 When designing the target a few things need to be considered. As stated in
-\autoref{FeatAndReq} The target needs to move fast enough to make \name
-calculate an offset. The turret also needs to be able to calculate this offset,
-which means that it needs to be able see the target. To determine the
-best colour for the target the tests in \autoref{CamTest} was conducted. From
-these tests we came to the conclusion that the target needs to be orange in
-order to get the best results from the camera.
-However it was determined that oranges gives to many false positives and
+\autoref{FeatAndReq}, the target needs to move fast enough to make \name
+miss if \name fires when it sees the target. The turret needs to be able to calculate this offset,
+which means that it needs to be able see the target. Since the primary method of
+tracking is tracking colours using the camera, the tests in \autoref{CamTest}
+were conducted in order to find the most suitable colour for the target. From these
+tests we came to the conclusion that the target needs to be orange in order to get the best
+results from the camera. However it was also determined that oranges gives to many false positives and
 therefore red was chosen as the target colour since it performed second best in
 the camera test.\nl
 
-Both a flat and cylindrical design for the target has been considered. The
+Both a flat and cylindrical design for the target have been considered. The
 advantage of the flat design is that it is large and easy for the ultrasonic
 sensors to see when they are pointed directly at the target. The disadvantage
-is that if it is at an angle to the ultrasonic sensors line of sight it 
+is that if it is at an angle to the ultrasonic sensors line of sight it
 becomes less likely that the soundwaves gets catched by the sensor when they
 bounce back. Another disadvantage is that if it is at an angle with the
 cameras line of sight it appears smaller to the camera.\nl
@@ -23,10 +23,25 @@ ultrasonic sensors needing to be pointed directly at the target, due to the
 fact that the angle is the same all around the target. The cylindrical design
 also ensures that the camera always sees the target as the same size.\nl
 
-In order to make the target move cart was designed. This cart consists of a
+In order to make the target move a cart was designed. This cart consists of a
 platform to place the target on and three wheels that are all fixed so they can
 not turn. An NXT is used to control the speed of the cart, to ensure that it
 travels at a constant speed.\fix{Add picture of the target}{}
+#Since our problem statement says that we are always travelling the same direction
+at a constant speed, there is no need for the target to be able to turn. This allows
+for a simple design for the vehicle, using only 3 wheels, fixed in place.
+\fix{Nævn hvilke motorer vi bruger}
+\fix{Nævn den kan have 3 forskellige hastigheder}
 
+Requirements:
 
+Design:
 
+  Target:
+
+  Engine:
+  The design of the engine consists of two regular NXT electrical motors used to
+  power the front wheels. Since the target only needs to be able to move straight
+  there is no need to device a turning mechanism for the wheels. The two motors
+  are synchronised using a built-in function of NXC, to further ensure that the
+  target always moves in a straight line.
