--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -1,6 +1,6 @@
 \chapter{Platform Choice}\label{PlatformC}
 The purpose of this chapter will be to analyse the different hardware platforms available
-and ultimately select one for the project. The platforms to be examined are Lego
+and ultimately select one for the project. The platforms to be examined are LEGO
 NXT Mindstorms and Arduino. These are chosen due to the fact that these
 platforms are offered by the university and that they are suited for an embedded system.
 First the platforms will be described briefly, then they will be
@@ -32,16 +32,16 @@ criteria:
   libraries.
 \end{itemize}
 
-\section{Lego NXT Mindstorms}
-The Lego NXT Mindstorms is the successor to the first robotics-platform released
-by Lego the Robotics Invention System \citep{NXTHistory}. Although the NXT
+\section{LEGO NXT Mindstorms}
+The LEGO NXT Mindstorms is the successor to the first robotics-platform released
+by LEGO the Robotics Invention System \citep{NXTHistory}. Although the NXT
 product-line contains the NXT 1.0, 2.0 and the newer EV3 brick, in this project
 the EV3 will be disregarded since this is not being offered by the university.
 Regarding the NXT 1.0 and 2.0 brick, they are in fact identical from a hardware
 perspective and so we will consider them the same in the scope of this project
 \citep{NXTversions}\nl
 
-The Lego NXT Mindstorms kit consists of the NXT brick and a set of
+The LEGO NXT Mindstorms kit consists of the NXT brick and a set of
 compatible sensors and actuators. The NXT brick \citep[P.70]{NXTStats} consists
 of:
 
@@ -51,41 +51,41 @@ of:
   \item 4 input ports compatible with the I2C standard and 3 output ports
 \end{itemize}
 
-The Lego NXT comes with its own programming environment with a visual
+The LEGO NXT comes with its own programming environment with a visual
 programming language for use with the NXT platform \cite{NXTG}. There exist a
 variety of unofficial programming languages for the NXT, such as leJOS(Java) and
 RobotC(C) which makes it possible to write programs using the more popular programming
 languages \citep{NXTProgrammingLanguage}.\nl
 
-When using the LEGO NXT platform, one can make use of a multitude of 1st or 3rd
-party peripherals. These specialized peripherals come programmed and assembled -
-all the user has to do is handle the data received by the NXT brick \Source.
-Another feature of the platform is that the NXT can be directly combined with
-Lego Technics, or just lego in general, to use as a building platform. This
-makes construction simple, as it is not necessesary to manifacture your own
+% When using the LEGO NXT platform, one can make use of a multitude of 1st or 3rd
+% party peripherals. These specialized peripherals come programmed and assembled -
+% all the user has to do is handle the data received by the NXT brick \Source.
+One feature of the platform is that the NXT can be directly combined with
+LEGO Technics, or just LEGO in general, to use as a building platform. This
+makes construction simple, as it is not necessary to manufacture your own
 mechanical parts.
 
 \section{Arduino}
-The Arduino platform is developed as a tool for fast and effecient prototyping.
-By design, the platform is designed to be used effeciently by people without
+The Arduino platform is developed as a tool for fast and efficient prototyping.
+By design, the platform is designed to be used efficiently by people without
 much knowledge about programming and electronics. The Arduino lineup consists of
 a number of different boards, each with their own hardware specifications.
-\fix{As such, a model with sufficient memory, processing power and I/O
-ports.}{What?} The arduino comes with its own programming language and IDE
-\citep{ArduinoIntro}. For the sake of comparison we will use the Arduino Uno,
+As such, a model with sufficient memory, processing power and I/O
+ports exists to solve most problems. The Arduino comes with its own programming
+language and IDE \citep{ArduinoIntro}. For the sake of comparison we will use the Arduino Uno,
 since this is the board being offered by the university.\nl
 
 The Arduino Uno has the following technical specifications \citep{UNOSpecs}:
 
 \begin{itemize}
-  \item ATmega328P processor 16 MHz clockfrequency
+  \item ATmega328P processor running at 16 MHz 
   \item 32 KB Flash storage
   \item 2 KB SRAM
 \end{itemize}
 
 It should also be noted that as the Arduino platform is not limited to work with
-specific hardware, it has access to a large variety of 3rd party peripherals
-\fix{\citep{ArduinoComponents}}{Bad source, we are not buying}. In addition, due
+specific hardware, since the Arduino platform is very open it is possible to
+create your own circuits to use with it. In addition, due
 to the popularity of the platform, there appears to be a large dedicated community, which provides a large amount
 of libraries to use with the modules.
 
@@ -96,26 +96,26 @@ I2C protocol. This can be achieved relatively simple using a breadboard, a
 resistor and 2 cables for each platform \citep{ArduinoNXT}. The advantage of
 this approach is the fact that we can combine the two platforms and their
 respective modules as we please. This setup comes with the drawback that it can
-be very restrctive in relation to the turret design, as everything needs to be
+be very restrictive in relation to the turret design, as everything needs to be
 connected by cables to a breadboard. This design could be useful for a
 prototype, but the design limitations could be too limiting on the turrets
 mobility to be used in the final implementation. In addition, this approach will
 also require more effort on our side, to ensure proper compatibility between the
-platforms. The second option is to use the arduino platform with modules made
+platforms. The second option is to use the Arduino platform with modules made
 for the NXT. This can be achieved by using a special shield, that
-extends the arduino with ports that are compatible with the NXT modules. This
-would allow us to have the customizability of the arduino while still being able
+extends the Arduino with ports that are compatible with the NXT modules. This
+would allow us to have the customizability of the Arduino while still being able
 to use the proprietary sensors from the NXT. However the NXT shield is limited
 as it only supports up to two motors \citep{NXTShield}. Another issue with using
-the arduino is the ability to build it into the product, as it is not designed
-to be built into Lego the same way the NXT is.\nl
+the Arduino is the ability to build it into the product, as it is not designed
+to be built into LEGO the same way the NXT is.\nl
 
 \section{Platform comparison}
 Based on the criteria defined in \autoref{EvalCrit}, this section will be used
 to evaluate the two prototyping platforms, and finally conclude which platform
 will be used for the \name project. This evaluation is based on a combination of
 the group's personal experiences and technical details of the individual system.
-As such, the chosen platform is not only chosen based on objectivly comparable
+As such, the chosen platform is not only chosen based on objectively comparable
 factors, but also on the group members preferences and experiences in regards to
 the two platforms.
 
@@ -126,7 +126,7 @@ the two platforms.
   \item Building - When it comes to the ease of constructing the physical
   aspects of the turret, we regard the NXT as being the better platform. This
   choice was made based on the fact that using the NXT gives access to the
-  entirety of the Lego Technics system, which makes it easy to construct a
+  entirety of the LEGO Technics system, which makes it easy to construct a
   technical platform. Using the Arduino platform could be difficult, as it could
   require us to manually manufacture the individual parts of the turret, e.g.
   designing a functional shaft for the cannon to rotate about or constructing a
@@ -143,15 +143,15 @@ the two platforms.
   are input or output and it also has both analog and digital ports.
   
   \item Processing power - When comparing the technical specifications of the
-  two platforms, the NXT is superior in terms of both clockspeed and memory.
+  two platforms, the NXT is superior in terms of both clock speed and memory.
   While the NXT has 48MHz clock frequency, 256KB Flash storage and 64KB RAM, a
   standard Arduino UNO has a clock frequency of 16 MHz, 32 KB Flash storage and
   2 KB SRAM.
   
   \item Availability and Integration - If we limit the peripherals used by the
   NXT to those specifically designed for the platform, the Arduino has access
-  to a far wider selection of peripherals than the NXT. The Lego NXT
-  peripherals are built and configured to be used with a Lego NXT brick, thus
+  to a far wider selection of peripherals than the NXT. The LEGO NXT
+  peripherals are built and configured to be used with a LEGO NXT brick, thus
   resulting in a much simpler and streamlined process, being almost
   plug-and-play. Based on personal experience, the Arduino often requires more
   work in regards to integrating the modules with the board. Also, as the NXT
@@ -169,10 +169,10 @@ peripherals, the cost aspect is not deemed as a vital factor. As mentioned
 before the peripherals needed for the project are available for both platforms
 so this is not the deciding factor either.\nl
 
-In conclusion the group has chosen the Lego NXT platform for use in the project
+In conclusion the group has chosen the LEGO NXT platform for use in the project
 based on the following reasons:
 \begin{itemize}
-  \item It is easier to physically build a prototype with Lego parts.
+  \item It is easier to physically build a prototype with LEGO parts.
   \item Less time is spent on integration and more time spent on the software
 \end{itemize}
 
