--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -7,6 +7,8 @@ tracking, distance measurement and fireing.
 
 \input{sections/Implementation/NXCLang.tex}
 %\input{sections/Implementation/SoftwareHierachy.tex}
+\input{sections/Design/SystemArchitecture/HardwareArch.tex}
+\input{sections/Design/SystemArchitecture/SoftwareArch.tex}
 \input{sections/Implementation/Main.tex}
 \input{sections/Implementation/Tracking.tex}
 \input{sections/Implementation/GetDataAndCalculate.tex}
