--- a/sections/Design/SystemArchitecture/SystemArch.tex
+++ b/sections/Design/SystemArchitecture/SystemArch.tex
@@ -1,8 +1,8 @@
-\chapter{System Architecture}\label{SysArch}
-In the previous chapter the physical design of the turret was presented and
-explained. As such, this chapter will be used to present the technical aspects
-of the turret design, namely the system architecture. This chapter will be split
-into two sections for the hardware and software architectures respectively.
-
-\input{sections/Design/SystemArchitecture/HardwareArch.tex}
-\input{sections/Design/SystemArchitecture/SoftwareArch.tex}
+% \chapter{System Architecture}\label{SysArch}
+% In the previous chapter the physical design of the turret was presented and
+% explained. As such, this chapter will be used to present the technical aspects
+% of the turret design, namely the system architecture. This chapter will be split
+% into two sections for the hardware and software architectures respectively.
+% 
+% \input{sections/Design/SystemArchitecture/HardwareArch.tex}
+% \input{sections/Design/SystemArchitecture/SoftwareArch.tex}
