--- a/sections/Design/SystemArchitecture/SoftwareArch.tex
+++ b/sections/Design/SystemArchitecture/SoftwareArch.tex
@@ -8,11 +8,11 @@ not shared between threads.\nl
 
 While useful to get an overview, this model of the software architecture is also
 helpful, as it can help improve the software by showing the nesting of methods
-in our call stack. It should be noted, that this model can not take into account
-the firmware implemented on the various sensors. This is the case, as this
-software is not well documented, and as such, we do not know how it functions.
+in our call stack.
 
 \figx[0.6]{CallStack}{The call stack from the software}
 
-
+It should be noted, that this model can not take into account the firmware
+implemented on the various sensors. This is the case, as this software is not
+well documented, and as such, we do not know how it functions.
 
