--- a/sections/titlepages.tex
+++ b/sections/titlepages.tex
@@ -28,6 +28,14 @@
   Aalborg Universitet\\
   \url{http://www.aau.dk}
 }{% the abstract
-\ToDo
+During the semester introduction, the semester coordinator proposed a challenge
+which consisted of developing an autonomous turret, which is capable of hitting
+a moving target. In addition, the project participants partake in an
+introductory course in machine intelligence. Therefore this project focuses on
+the design and development of an autonomous turret, and the implementation of a
+machine intelligence model. This is all done in relation to the semester theme,
+which is embedded systems. As such, the developed turret will take the form of
+an embedded system, and adhere to the hardware constraints this approach
+imposes.
 }
  }
