--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -1,18 +1,17 @@
 \chapter{Problem Domain}\label{ProblemDomain}
 As the project has no actual customer to set the requirements for the project,
 the product requirements will be based on the Ren\'e's proposed challenge and
-the educational goals for the semester.\nl
-
-In this chapter we construct an ideal scenario. This scenario is then analyzed in order to
-understand the problem domain, and finally a summary is given.
+the educational goals for the semester.\nl 
+As such, this chapter will be used to construct an ideal scenario for the
+turrets operation, which will then be analyzed in order to define the problem
+domain and initial goals for the project.
 
 \section{Ideal Scenario}
-Based on the initial problem it is now possible to describe how the turret is
-supposed to operate. We construct an ideal scenario in order to better
+Based on the proposed challenge, it is possible to describe an ideal scenario
+of how the turret should operate. We construct an ideal scenario in order to better
 visualize the initial problem and to serve as a basis for the requirements engineering.
 The ideal scenario involves the two actors the ``Turret'' and the ``Target'',
- and
-describes how they interact with each other.
+and describes how they should interact with each other.
 
 \begin{center}
 \colorbox{diff}{
