--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -3,25 +3,29 @@ Computers have become an integral part of modern society, not just as personal
 computers or servers, but also in the most minute of electronic devices
 like kitchen appliances and radiator thermostats. This entire class of minute
 computers surrounds us in much greater numbers than ever before, although their
-presence is not as noticeable as for example a PC. These computers are built
-into a large part of all electronic devices. This class of computer systems is
-also known as embedded systems.\nl
+presence is not as noticeable as for example a personal computer. These
+computers are integrated into a large part of all electronic devices. This class
+of computer systems is also known as embedded systems.\nl
 
 
-%Focuserer vi på at optimizere softwaren?
+%Focuserer vi pï¿½ at optimizere softwaren?
 This projecs focuses on embedded systems and ends up with a physical product,
-which qualifies as an embedded system. This presents some issues as there is a
+which qualifies as an embedded system. This presents some issues as
+developing for embedded systems impose hardware limitations in the form of a
 limited amount of memory and processing power. Therefore, this project will be
-focused on optimizing the software for the platform. Furthermore this project
-will include aspects from machine intelligence and real time systems.
+focused on designing, implementing and optimizing a software solution for an
+embedded hardware platform. Furthermore, as the project group is partaking in
+an introductory course to machine intelligence, this project will include
+aspects relating to implementation of machine intelligence models.
 % The theme of this semester is Embedded systems. This means that the focus of
 % the project will be working with a set of constraints that must be balanced.
 % Furthermore the project should include techniques from the machine intelligence
 % course and the real-time systems course.
 
 \section{Initial Problem}\label{InitialProblem}
-A recurring project proposal idea is a challenge proposed by the semester coordinator Ren\'e
-Hansen. The challenge is:
+During the initial semester introduction, a recurring project concept was
+proposed by the semester coordinator Ren\'e Hansen. This proposal took the
+form of the following challenge:
 
 \begin{center}
 \begin{minipage}{0.8\linewidth}
@@ -51,7 +55,7 @@ problem:
 \begin{center}
 \begin{minipage}{0.8\linewidth}
 \textit{How can an autonomous turret be designed and constructed such that it is
-capable of hitting a target.}
+capable of hitting a moving target.}
 \end{minipage}
 \end{center}
 
