Add speedtest section and new target design layout

--- a/sections/Design/TnTDesign/TargetDesign.tex
+++ b/sections/Design/TnTDesign/TargetDesign.tex
@@ -37,7 +37,7 @@ at a constant speed, there is no need for the target to be able to turn. This al
 for a simple design for the vehicle, using only 3 wheels, fixed in place. The cart
 is powered by a NXT brick used to control the motors. The cart has 4 different speeds including standing:
 25, 50,75,100 indicating the percentage of power being fed to the motors. In order to
-calculate the speed a test was conducted\fix{inkluder target speed test fra drive og link den her}
+calculate the speed a test was conducted\autoref{speedotesto}
 although the speed with a value of 25 was never tested since it was observed that
 it was travelling too slow for our requirement from \autoref{FeatAndReq} that states
 that the target must travel at a speed such that the turret will miss if it fires when
