--- a/sections/Testing/Testing.tex
+++ b/sections/Testing/Testing.tex
@@ -79,3 +79,5 @@ Test Num:                     & 4      \\ \hline
 \caption{Results from data set 4.}
 \label{AngleTest1Result}
 \end{table}
+
+\input{sections/Testing/Speedtest.tex}
